test/must_fail/echo_trap_over_multiple_arguments.ref
AAA 123 true

error: echo_trap was triggered by 'ABC DEF'
  [echo_trap_over_multiple_arguments.ngjs:0:0] in <anonymous>()
    echo("ABC", "DEF");
    ^

Stack trace (1 frames):
  [echo_trap_over_multiple_arguments.ngjs:0:0] in <anonymous>()
    echo("ABC", "DEF");
    ^

exit(10)
